<resources>
    <string name="app_name">Inventory App</string>
    <string name="insert_error">an error has occurred while insert your data</string>
    <string name="productname">Product %d</string>
    <string name="suppliername">Supplier %d</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="add_product">Add a Product</string>
    <string name="prod_name">Product Name</string>
    <string name="prod_price">Price</string>
    <string name="prod_quantity">Quantity</string>
    <string name="prod_supplier_name">Supplier Name</string>
    <string name="prod_supplier_phone">Supplier Phone</string>
    <string name="prod_variant">Variant</string>
    <string name="no_variant">No variant</string>
    <string name="size_s">Size S</string>
    <string name="size_m">Size M</string>
    <string name="size_l">Size L</string>
    <string name="size_xl">Size XL</string>
    <string name="save_product">Save Product</string>
    <string name="name_required">Product name is required</string>
    <string name="variant_required">Product variant required</string>
    <string name="price_required">Price can`t be less than zero</string>
    <string name="quantity_count">Quantity can`t less than zero</string>
    <string name="update_error">There was an error while saving</string>
    <string name="delete_error">There was an error while saving</string>
    <string name="delete_product">Delete Product</string>
    <string name="confirm_delete_product">Do you really want to delete that product?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="input_required">Input required</string>
    <string name="initial_quantity">0</string>
    <string name="you_modified">You modified your input do you really want to leave?</string>
    <string name="modified">Modified input</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="no_content">No content. Please add a product</string>
    <string name="price">Price: %s</string>
    <string name="edit_product">Edit Product</string>
</resources>
