<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditActivity"
    tools:showIn="@layout/activity_edit">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marging_objects"
            android:layout_marginEnd="@dimen/marging_objects"
            android:layout_marginLeft="@dimen/marginLR"
            android:layout_marginRight="@dimen/marging_objects"
            android:layout_marginStart="@dimen/marginLR"
            android:layout_marginTop="@dimen/marginLR"
            android:text="@string/prod_name"
            app:layout_constraintBottom_toBottomOf="@+id/prod_name"
            app:layout_constraintEnd_toStartOf="@+id/prod_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marging_objects"
            android:layout_marginEnd="@dimen/marging_objects"
            android:layout_marginLeft="@dimen/marginLR"
            android:layout_marginRight="@dimen/marging_objects"
            android:layout_marginStart="@dimen/marginLR"
            android:layout_marginTop="@dimen/marging_objects"
            android:text="@string/prod_price"
            app:layout_constraintBottom_toBottomOf="@+id/prod_price"
            app:layout_constraintEnd_toStartOf="@+id/prod_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/prod_price" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginLR"
            android:layout_marginLeft="@dimen/marginLR"
            android:layout_marginRight="@dimen/marginLR"
            android:layout_marginStart="@dimen/marginLR"
            android:layout_marginTop="@dimen/marging_objects"
            android:text="@string/prod_quantity"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prod_price" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marging_objects"
            android:layout_marginEnd="@dimen/marging_objects"
            android:layout_marginLeft="@dimen/marginLR"
            android:layout_marginRight="@dimen/marging_objects"
            android:layout_marginStart="@dimen/marginLR"
            android:layout_marginTop="@dimen/marging_objects"
            android:text="@string/prod_supplier_name"
            app:layout_constraintBottom_toBottomOf="@+id/prod_supplier_name"
            app:layout_constraintEnd_toStartOf="@+id/prod_supplier_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/prod_supplier_name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marging_objects"
            android:layout_marginEnd="@dimen/marging_objects"
            android:layout_marginLeft="@dimen/marginLR"
            android:layout_marginRight="@dimen/marging_objects"
            android:layout_marginStart="@dimen/marginLR"
            android:layout_marginTop="@dimen/marging_objects"
            android:text="@string/prod_supplier_phone"
            app:layout_constraintBottom_toBottomOf="@+id/prod_supplier_phone"
            app:layout_constraintEnd_toStartOf="@+id/prod_supplier_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/prod_supplier_phone" />

        <EditText
            android:id="@+id/prod_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginLR"
            android:layout_marginRight="@dimen/marginLR"
            android:layout_marginTop="@dimen/marginLR"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/prod_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginLR"
            android:layout_marginRight="@dimen/marginLR"
            android:layout_marginTop="@dimen/marging_objects"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prod_name" />

        <EditText
            android:id="@+id/prod_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marging_objects"
            android:layout_marginLeft="@dimen/marginLR"
            android:layout_marginRight="@dimen/marging_objects"
            android:layout_marginStart="@dimen/marginLR"
            android:layout_marginTop="@dimen/marging_objects"
            android:ems="10"
            android:inputType="number"
            android:text="@string/initial_quantity"
            app:layout_constraintEnd_toStartOf="@+id/deacreaseButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/prod_supplier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginLR"
            android:layout_marginRight="@dimen/marginLR"
            android:layout_marginTop="@dimen/marginLR"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prod_quantity" />

        <EditText
            android:id="@+id/prod_supplier_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginLR"
            android:layout_marginRight="@dimen/marginLR"
            android:layout_marginTop="@dimen/marging_objects"
            android:ems="10"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prod_supplier_name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marging_objects"
            android:layout_marginLeft="@dimen/marginLR"
            android:layout_marginRight="@dimen/marging_objects"
            android:layout_marginStart="@dimen/marginLR"
            android:layout_marginTop="@dimen/marging_objects"
            android:text="@string/prod_variant"
            app:layout_constraintBottom_toBottomOf="@+id/prod_variant_spinner"
            app:layout_constraintEnd_toStartOf="@+id/prod_variant_spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/prod_variant_spinner" />

        <Spinner
            android:id="@+id/prod_variant_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marginLR"
            android:layout_marginRight="@dimen/marginLR"
            android:layout_marginTop="@dimen/marginLR"
            android:entries="@array/spinner_items"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prod_supplier_phone" />

        <Button
            android:id="@+id/callsupplierButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/marging_objects"
            android:layout_marginLeft="@dimen/marging_objects"
            android:layout_marginRight="@dimen/marging_objects"
            android:layout_marginStart="@dimen/marging_objects"
            android:layout_marginTop="@dimen/marginLR"
            android:text="@string/call_supplier"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/increaseButton"
            android:layout_width="@dimen/buttons"
            android:layout_height="@dimen/buttons"
            android:layout_marginEnd="@dimen/marginLR"
            android:layout_marginRight="@dimen/marginLR"
            android:layout_marginTop="@dimen/marging_objects"
            android:text="@string/plus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <Button
            android:id="@+id/deacreaseButton"
            android:layout_width="@dimen/buttons"
            android:layout_height="@dimen/buttons"
            android:layout_marginEnd="@dimen/marging_objects"
            android:layout_marginRight="@dimen/marging_objects"
            android:layout_marginTop="@dimen/marging_objects"
            android:text="@string/minus"
            app:layout_constraintEnd_toStartOf="@+id/increaseButton"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>